@@ -141,8 +141,10 @@ preference_general_ignore_recycling_recipes=Ignore recycling recipes
 preference_general_ignore_recycling_recipes_tt=Allows you to ignore recipes that recycle an existing item (Only for compatible mods)
 preference_general_ingredient_satisfaction=Ingredient satisfaction
 preference_general_ingredient_satisfaction_tt=Shows whether the ingredient-demands of a recipe are satisfied by the recipes below them
-preference_general_round_button_numbers=Round button numbers
+preference_general_round_button_numbers=Rounded button numbers
 preference_general_round_button_numbers_tt=Rounds up the numbers on machine- and belts/lanes-buttons
+preference_general_attach_subfactory_products=Subfactory product icons
+preference_general_attach_subfactory_products_tt=Shows icons of the output produced by a subfactory alongside its given name
 preference_production_title=Production table columns
 preference_production_title_tt=This allows you to enable some additional columns in the production table
 preference_production_done_column=Mark recipe as done
